crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__sentry__src__sentry__templatetags__sentry_features.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/sentry/src/sentry/templatetags/sentry_features.py
---
tag_rules:
  "src.sentry.templatetags.sentry_features::tag::feature":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: name
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
filter_arities: {}
block_specs:
  "src.sentry.templatetags.sentry_features::tag::feature":
    end_tag: endfeature
    intermediates:
      - else
    opaque: false
