crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__sentry__src__sentry__templatetags__sentry_platforms.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/sentry/src/sentry/templatetags/sentry_platforms.py
---
tag_rules:
  "src.sentry.templatetags.sentry_platforms::tag::letter_platform_svg":
    arg_constraints:
      - Min: 3
      - Max: 5
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: display_name
        required: true
        kind: Variable
        position: 0
      - name: identifier
        required: true
        kind: Variable
        position: 1
      - name: size
        required: false
        kind: Variable
        position: 2
      - name: rounded
        required: false
        kind: Variable
        position: 3
    supports_as_var: true
  "src.sentry.templatetags.sentry_platforms::tag::platform_avatar":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: display_name
        required: true
        kind: Variable
        position: 0
      - name: size
        required: false
        kind: Variable
        position: 1
    supports_as_var: true
filter_arities: {}
block_specs: {}
